[package]
name = "cli"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.40"
anchor-client = "0.11.1"
anchor-lang = "0.11.1"
anchor-spl = "0.11.0"
spl-associated-token-account  = { version = "1.0.2", features = ["no-entrypoint"] }
spl-token  = { version = "1", features = ["no-entrypoint"] }
clap = "3.0.0-beta.2"
multisig = { path = "../programs/multisig" }
borsh = "0.9.1"
serde = "1.0"
serde_json = "1.0"
shellexpand = "2.1.0"
hex = "0.4.3"
base64 = "0.13.0"

[[bin]]
path = "src/main.rs"
name = "multisig"
