[package]
name = "multisig-cli"
version = "0.1.0"
edition = "2018"


[dependencies]
multisig-client = { path = "../client" }
anchor-client = "0.21.0"
anchor-spl = "0.21.0"
spl-token = "3.2.0"
serum-multisig = { path = "../programs/multisig", features = ["no-entrypoint"]  }
shellexpand = "2.1.0"
anyhow = "1.0.32"
rand = "0.7.3"
toml = "0.5.8"
serde_derive = "1.0"
serde = "1.0"
serde_with = "1.3"
serde_json = "1.0"
bincode = "1.3"
clap = "3.0.0-beta.4"
solana-logger = "1.7.11"
solana-remote-wallet = "1.7.11"
solana-clap-utils = "1.7.11"
clap2 = { package = "clap", version = "2.33.0" }
