[package]
name = "jet-multisig-cli"
version = "0.1.0"
edition = "2018"


[dependencies]
multisig-client = { path = "../../client" }
multisig-cli = { path = "../../cli" }
anchor-client = { git = "https://github.com/jet-lab/anchor", branch = "accounts" }
anyhow = "1.0.32"
clap = "3.0.0-beta.5"
jet = { git = "https://github.com/jet-lab/jet-v1" }
solana-logger = "1.7.11"
serum-multisig = { path = "../../programs/multisig", features = ["no-entrypoint"]  }
paste = "1.0.5"
anchor-spl = { git = "https://github.com/jet-lab/anchor", branch = "accounts" }
custody = { path = "../../../custody/programs/custody", features = ["no-entrypoint"]  }
rand = "0.7.3"
serde = "1.0"
serde_derive = "1.0"
serde_with = "1.3"
