[package]
name = "mean-multisig"
version = "1.15.0"
description = "Mean multisig program"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mean_multisig"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
solana-program = "1.13.5"
